code quality metrix-mapping
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>